# GS_ERP

./: .env.example  .env.production.example  .gitignore  GS_ERP_Master_QA_Test_Plan.xlsx  README.md  conftest.py  deploy.sh  manage.py  pyproject.toml  setup_mysql.sh
apps/audit/: apps.py  models.py
apps/billing/: apps.py  models.py
apps/catalog/: apps.py  models.py
apps/core/: apps.py  models.py
apps/crm/: apps.py  models.py  signals.py
apps/dashboard/: apps.py  models.py  urls.py  views.py
apps/etl/: __init__.py  apps.py  models.py
apps/finance/: apps.py  models.py  signals.py
apps/hr/: __init__.py  apps.py  models.py
apps/intelligence/: apps.py
apps/inventory/: apps.py  models.py
apps/notifications/: apps.py  models.py
apps/pos/: __init__.py  apps.py  models.py
apps/purchases/: __init__.py  apps.py  models.py
apps/reports/: apps.py
apps/sales/: __init__.py  apps.py  models.py
apps/settings_app/: apps.py
apps/tenancy/: apps.py  models.py
apps/treasury/: apps.py
apps/users/: apps.py  models.py
apps/zatca/: admin.py  apps.py  signals.py  tasks.py
common/: context_processors.py  drf_permissions.py  forms.py  mixins.py  openapi.py  pagination.py  views.py
common/etl/: base.py  csv_io.py  legacy_id_map.py  reconciliation.py
common/exceptions/: __init__.py  domain.py  handlers.py
common/permissions/: __init__.py  (+1 more)
config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  nginx.conf  nginx.http-only.conf
docs/: REMAINING_GAPS.md  deployment.md  phase_0.md  phase_1.1.md  phase_1.2.md  phase_2.md  phase_3.md  phase_4.md  phase_5.md  phase_6.md  phase_7.md  user-manual-ar.md
requirements/: base.txt  development.txt  production.txt  test.txt
templates/: 400.html  _coming_soon.html  _placeholder.html  base.html
(+643 files in other folders)
